Add: 迁移到新的Github仓库

--- a/gia-app-doc/部署.md
+++ b/gia-app-doc/部署.md
@@ -17,7 +17,7 @@ cd target/
 # 使用sftp上传的服务器
 sudo sftp -P 10022 root@192.168.99.77:/root/testoauth2/
 # 上传
-put tdf-oauth-server-2.3.9.1.jar
+put diamond-gia-2.3.9.1.jar
 # 推出sftp
 exit
 ```
@@ -26,11 +26,11 @@ exit
 ```
 # 运行
 #!/bin/bash
-nohup java -jar tdf-oauth-server-2.3.9.1.jar --spring.profiles.active=prod --server.port=9999 &  > log.file 2>&1 &
+nohup java -jar diamond-gia-2.3.9.1.jar --spring.profiles.active=prod --server.port=9999 &  > log.file 2>&1 &
 
 # 停止
 #!/bin/bash
-PID=$(ps -ef | grep "tdf-oauth-server-2.3.9.1.jar --spring.profiles.active=prod" | grep -v grep | awk '{ print $2 }')
+PID=$(ps -ef | grep "diamond-gia-2.3.9.1.jar --spring.profiles.active=prod" | grep -v grep | awk '{ print $2 }')
 if [ -z "$PID" ]
 then
     echo Application is already stopped
@@ -49,7 +49,7 @@ cd target/
 # 使用sftp上传的服务器
 sudo sftp -P 10022 root@192.168.99.77:/root/oauth2/181
 # 上传
-put tdf-oauth-server-2.3.9.1.jar
+put diamond-gia-2.3.9.1.jar
 # 推出sftp
 exit
 ```
@@ -67,7 +67,7 @@ exit
 
 
 ### 集群部署
-tdf-oauth-server目前没有原生支持集群部署。可以使用nginx代理的方式，
-将统一ip的用户路由到特定的tdf-oauth-server示例的方式。目前生产环境使用的nginx主备模式部署
+diamond-gia目前没有原生支持集群部署。可以使用nginx代理的方式，
+将统一ip的用户路由到特定的diamond-gia示例的方式。目前生产环境使用的nginx主备模式部署
 
  备份服务在192.168.99.76服务器的/root/oauth2目录下
