--- a/gia-app-doc/用户手册.md
+++ b/gia-app-doc/用户手册.md
@@ -6,7 +6,7 @@ https://gia.diamond.hoioy.com/ 进入登录页面。
 ![](./img/0login.png)
 
 ### Portal页面
-门户页面包含用户可以看到的所有对接使用太极一统一认证的客户端应用。
+门户页面包含用户可以看到的所有对接使用hoioy一统一认证的客户端应用。
 ![](./img/1portal.png)
 点击各个应用跳转到各自的主页。
 
@@ -33,4 +33,4 @@ https://gia.diamond.hoioy.com/ 进入登录页面。
 
 ### 关于客户端对接
 博客介绍: http://tech.hoioy.com/#/blog/view/7eb7cba83b6b4dc38216dda46057e4e8
-源码地址: https://gitlab.hoioy.com/IRI/tdf-auth/tdf-oauth-server
+源码地址: https://gitlab.hoioy.com/IRI/diamond-auth/diamond-gia
