Add: 迁移到新的Github仓库

--- a/gia-app-doc/10.问题与解答/问题与解答.md
+++ b/gia-app-doc/10.问题与解答/问题与解答.md
@@ -17,7 +17,7 @@
     |Keycloak|支持|https://www.keycloak.org/docs/latest/authorization_services/index.html|
     |github|不支持|----|
 1. security.oauth2.resource.userInfoUri怎么配置?  
-    支持多种用户数据源,不同的数据源的用户属性信息不同,所以tdf-oauth-server提供了统一的获取用户信息接口“/user/me”.但是针对公司的LDAP用户(邮箱前缀+密码)认证,提供了一个数据更丰富的用户接口(”/me“).所以,如果您的用户来源于公司内部统一邮箱(或邮箱前缀)登录的方式,则可以配置为(”/me“
+    支持多种用户数据源,不同的数据源的用户属性信息不同,所以 Diamond GIA 提供了统一的获取用户信息接口“/user/me”.但是针对公司的LDAP用户(邮箱前缀+密码)认证,提供了一个数据更丰富的用户接口(”/me“).所以,如果您的用户来源于公司内部统一邮箱(或邮箱前缀)登录的方式,则可以配置为(”/me“
 1. client为什么要配置cookie name?
     假如本地(localhost)同时启动了DIamond GIA 和 client 进行调试.浏览器中存储的server和client的cookie默认都是JSESSIONID,会产生冲突,导致登录失败. 所以配置不同的cookie name.当然还有其他解决办法,比如配置context path使得cookie的path不一样;
 1. 不想弹出用户确认权限界面怎么办?  
