--- a/gia-app-doc/3.用户手册/用户手册.md
+++ b/gia-app-doc/3.用户手册/用户手册.md
@@ -6,7 +6,7 @@ https://gia.diamond.hoioy.com/ 进入登录页面。
 ![](img/0login.png)
 
 ### Portal页面
-门户页面包含用户可以看到的所有对接使用hoioy一统一认证的客户端应用。
+门户页面包含用户可以看到的所有对接使用GIA的第三方客户端应用。
 ![](img/1portal.png)
 点击各个应用跳转到各自的主页。
 
@@ -26,11 +26,7 @@ https://gia.diamond.hoioy.com/ 进入登录页面。
 ![](img/5setrole.png)
 
 ### 自有用户
-统一认证中心对接了公司LDAP用户，也支持自有用户编辑。点击·所有用户·tab页对用户进行编辑
+点击·所有用户·tab页对用户进行编辑
 ![](img/6user.png)
 
 可以使用自有用户登录，自由分配角色。如果自有用户与LDAP用户名冲突，以LDAP用户为准。
-
-### 关于客户端对接
-博客介绍: http://tech.hoioy.com/#/blog/view/7eb7cba83b6b4dc38216dda46057e4e8
-源码地址: https://gitlab.hoioy.com/IRI/diamond-auth/diamond-gia
